--- a/css/custom.css
+++ b/css/custom.css
@@ -63,21 +63,25 @@ header {
       letter-spacing: 5px;
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
-      text-rendering: optimizeLegibility; }
+      text-rendering: optimizeLegibility;
+      font-size: 16px;
+      line-height: 20px;
+      margin: 0; }
 
 .hello-form {
-  width: 1000px;
+  width: 95%;
+  max-width: 1000px;
   background: white;
   margin: auto;
   margin-top: -100px;
   padding-top: 40px;
-  overflow: auto; }
+  height: 220px; }
   .hello-form .hello-form--punchline {
     font-size: 2.5em;
     text-align: center;
     font-weight: 300;
     color: #4e4e4e;
-    margin-bottom: 30px; }
+    margin: 0 0 30px 0; }
   .hello-form .hello-form--filters-wrapper {
     width: 100%; }
     .hello-form .hello-form--filters-wrapper .hello-form--filters-wrapper--box {
@@ -89,16 +93,59 @@ header {
       .hello-form .hello-form--filters-wrapper .hello-form--filters-wrapper--box:last-child {
         padding-right: 30px; }
 
-button {
-  font-size: 10px;
-  font-weight: 700;
+.cd-gallery {
+  max-width: 95%;
+  width: 1000px;
+  margin: auto;
+  float: none;
+  padding: 50px 0; }
+  .cd-gallery .card {
+    width: 32%;
+    height: 363px;
+    background: white;
+    overflow: auto;
+    position: relative; }
+    @media screen and (max-width: 800px) {
+      .cd-gallery .card {
+        width: 49%; } }
+    @media screen and (max-width: 500px) {
+      .cd-gallery .card {
+        width: 100%; } }
+    .cd-gallery .card .card-header {
+      width: 100%;
+      height: 150px;
+      background: red;
+      background-position: center center !important;
+      background-size: cover !important; }
+    .cd-gallery .card .card-excerpt {
+      padding: 15px; }
+
+.date {
+  display: block;
+  margin-bottom: 10px;
   text-transform: uppercase;
-  background: #930025;
-  color: white;
-  border: none;
-  padding: 10px 13px;
-  outline: none;
-  border-radius: 3px;
-  cursor: pointer; }
+  opacity: 0.5;
+  font-size: 14px; }
+
+h1 {
+  font-family: Apercu;
+  font-size: 20px;
+  text-align: left;
+  font-weight: 700;
+  margin: 0; }
+
+.lieu {
+  display: block;
+  position: absolute;
+  bottom: 15px;
+  border-top: 1px solid #e8e8e8;
+  padding-top: 10px; }
+
+button {
+  font-family: apercu !important;
+  font-weight: 700 !important; }
+
+.desktop-hidden {
+  display: none; }
 
 /*# sourceMappingURL=custom.css.map */
