--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -96,6 +96,9 @@ header
                 -webkit-font-smoothing: antialiased; 
                 -moz-osx-font-smoothing: grayscale; 
                 text-rendering: optimizeLegibility;
+                font-size: 16px;
+                line-height: 20px;
+                margin: 0;
             }
     }
 
@@ -104,13 +107,15 @@ header
 
 .hello-form
 {
-    width: 1000px;
+    width: 95%;
+    max-width: 1000px;
     background: white;
    // height: 215px;
     margin: auto;
     margin-top: -100px;
     padding-top: 40px;
-    overflow: auto;
+    height: 220px;
+    //overflow: auto;
 
     .hello-form--punchline
     {
@@ -118,7 +123,7 @@ header
         text-align: center;
         font-weight: 300;
         color: #4e4e4e;
-        margin-bottom: 30px;
+        margin: 0 0 30px 0;
     }
 
     .hello-form--filters-wrapper
@@ -144,16 +149,90 @@ header
     }
 }
 
+.cd-gallery 
+{
+    max-width: 95%;
+    width: 1000px;
+    margin: auto;
+    float: none;
+    padding: 50px 0;
+
+    .card
+    {
+        width: 32%;
+        height: 363px;
+        background: white;
+        overflow: auto;
+        position: relative;
+
+       @media screen and (max-width: 800px) {
+             width: 49%;
+        }
+
+        @media screen and (max-width: 500px) {
+             width: 100%;
+        }
+
+        .card-header
+        {
+            width: 100%;
+            height: 150px;
+            background: red;
+            background-position: center center !important;
+            background-size: cover !important;
+        }
+
+        .card-excerpt
+        {
+            padding: 15px;
+        }
+    }
+}
+
+.date 
+{
+    display: block;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    opacity: 0.5;
+    font-size: 14px;
+}
+
+h1 
+{
+    font-family: Apercu;
+    font-size: 20px;
+    text-align: left;
+    font-weight: 700;
+    margin: 0;
+}
+
+.lieu 
+{
+    display: block;
+   position: absolute;
+   bottom: 15px;
+   border-top: 1px solid #e8e8e8;
+   padding-top: 10px;
+}
+
 button 
 {
-    font-size: 10px;
-    font-weight: 700;
-    text-transform: uppercase;
-    background: $color;
-    color: white;
-    border: none;
-    padding: 10px 13px;
-    outline: none;
-    border-radius: 3px;
-    cursor: pointer;
+    // font-size: 10px;
+    // font-weight: 700;
+    // text-transform: uppercase;
+    // background: $color;
+    // color: white;
+    // border: none;
+    // padding: 10px 13px;
+    // outline: none;
+    // border-radius: 3px;
+    // cursor: pointer;
+    font-family: apercu !important;
+    font-weight: 700 !important;
+}
+
+.desktop-hidden
+{
+    display:none;
 }
