--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -77,7 +77,7 @@ header
     margin: auto;
     margin-top: -100px;
     padding-top: 40px;
-    height: 220px;
+    height: 260px;
     margin-bottom: 50px;
     //overflow: auto;
 
@@ -87,7 +87,7 @@ header
         text-align: center;
         font-weight: 300;
         color: #4e4e4e;
-        margin: 0 0 30px 0;
+        margin: 0 0 20px 0;
     }
 
     .hello-form--filters-wrapper 
@@ -96,20 +96,21 @@ header
 
         .hello-form--filters-wrapper--box
         {
-            width: 20%;    
+            width: 33.33332%;    
             float: left;
-            padding: 15px;
+            padding: 0 15px;
 
             // @media screen and (max-width: 768px) {
             //   width: 50%;
             // }
 
-            &:first-child
+            &:nth-child(3n+1)
             { 
                 padding-left: 30px;
+                //background:red
             }
 
-            &:last-child
+            &:nth-child(3n+3)
             {
                 padding-right: 30px;
             }
@@ -232,6 +233,16 @@ header
   font-family: Roboto;
 }
 
+.card .card-meta .card-meta--date
+{
+  
+}
+
+.card .card-meta .card-meta--tag
+{
+  float: right;
+}
+
 .card-title
 {
   color: white !important;
@@ -269,6 +280,20 @@ header
   bottom: 0;
   border-top: 1px solid rgba(0,0,0,.1);
   font-family: Roboto;
+  overflow: visible !important;
+  
+  .share-menu 
+  {
+    float: right;
+    //height: 100%;
+    padding-left: 13px;
+    padding-top: 12px;
+    position: absolute;
+    right: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    //border-left: 1px solid rgba(0, 0, 0, 0.1);;
+  }
 }
 
 
@@ -277,7 +302,7 @@ h2 //Punchline
   font-family: 'Apercu' !important;
 }
 
-.getmdl-select
+.getmdl-select, .mdl-textfield 
 {
   font-family: 'Apercu';
 }
