--- a/index.html.twig
+++ b/index.html.twig
@@ -47,6 +47,19 @@
 				<h2 class="hello-form--punchline">Trouvez votre prochain rendez-vous</h2>
 				<div class="hello-form--filters-wrapper">
 					<div class="hello-form--filters-wrapper--box ">
+
+
+						<form action="#">
+						  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+						    <input class="mdl-textfield__input" type="text" id="sample3">
+						    <label class="mdl-textfield__label" for="sample3"><i class="material-icons">search</i><span style="position: absolute;
+    top: 2px;">Rechercher un terme</span></label>
+						  </div>
+						</form>
+						
+						
+					</div>
+					<div class="hello-form--filters-wrapper--box ">
 						<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
 					        <input type="text" value="" class="mdl-textfield__input" id="filter-place" readonly>
 					        <input type="hidden" value="" name="filter-place">
@@ -133,24 +146,23 @@
 						
 					</div>
 					<div class="card-desc mdl-card__supporting-text">
-						<span class="card-meta">13 février 2018 <span style="float: right; text-transform: initial;">Lausanne</span></span>
+						<span class="card-meta"><span class""card-meta--date>13 février 2018</span><span class="card-meta--tag">#concert</span></span>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 						Mauris sagittis pellentesque lacus eleifend lacinia...
-
 					</div>
 					<div class="card-footer mdl-card__supporting-text">
-						#concert
-					</div>
-					<!-- <div class="mdl-card__actions mdl-card--border">
-						<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-							Get Started
-						</a>
-					</div> -->
-					<!-- <div class="card-menu mdl-card__menu">
-						<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-							<i class="material-icons">share</i>
+						Rédaction du Temps, <b>Lausanne</b>
+						<button id="demo-menu-top-right" class="share-menu mdl-button mdl-js-button mdl-button--icon">
+						  <i class="material-icons">share</i>
 						</button>
-					</div> -->
+						<ul class="mdl-menu mdl-menu--top-right mdl-js-menu mdl-js-ripple-effect share-menu--content"
+						    data-mdl-for="demo-menu-top-right">
+						  <li class="mdl-menu__item">Facebook</li>
+						  <li class="mdl-menu__item">Twitter</li>
+						  <li class="mdl-menu__item">Linkedin</li>
+						</ul>
+					</div>
+					
 				</div>
 
 				<div class="card card-wide mdl-card mdl-shadow--2dp">
@@ -171,16 +183,7 @@
 					<div class="card-footer mdl-card__supporting-text">
 						Rédaction du Temps, <b>Lausanne</b>
 					</div>
-					<!-- <div class="mdl-card__actions mdl-card--border">
-						<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-							Get Started
-						</a>
-					</div> -->
-					<!-- <div class="card-menu mdl-card__menu">
-						<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-							<i class="material-icons">share</i>
-						</button>
-					</div> -->
+					
 				</div>
 
 				<div class="card card-wide mdl-card mdl-shadow--2dp">
@@ -201,16 +204,7 @@
 					<div class="card-footer mdl-card__supporting-text">
 						Rédaction du Temps, <b>Lausanne</b>
 					</div>
-					<!-- <div class="mdl-card__actions mdl-card--border">
-						<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-							Get Started
-						</a>
-					</div> -->
-					<!-- <div class="card-menu mdl-card__menu">
-						<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-							<i class="material-icons">share</i>
-						</button>
-					</div> -->
+					
 				</div>
 
 				<div class="card card-wide mdl-card mdl-shadow--2dp">
@@ -231,16 +225,7 @@
 					<div class="card-footer mdl-card__supporting-text">
 						Rédaction du Temps, <b>Lausanne</b>
 					</div>
-					<!-- <div class="mdl-card__actions mdl-card--border">
-						<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-							Get Started
-						</a>
-					</div> -->
-					<!-- <div class="card-menu mdl-card__menu">
-						<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-							<i class="material-icons">share</i>
-						</button>
-					</div> -->
+					
 				</div>
 
 				<div class="card card-wide mdl-card mdl-shadow--2dp">
@@ -261,16 +246,7 @@
 					<div class="card-footer mdl-card__supporting-text">
 						Rédaction du Temps, <b>Lausanne</b>
 					</div>
-					<!-- <div class="mdl-card__actions mdl-card--border">
-						<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-							Get Started
-						</a>
-					</div> -->
-					<!-- <div class="card-menu mdl-card__menu">
-						<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-							<i class="material-icons">share</i>
-						</button>
-					</div> -->
+					
 				</div>
 
 				<div class="card card-wide mdl-card mdl-shadow--2dp">
@@ -291,16 +267,7 @@
 					<div class="card-footer mdl-card__supporting-text">
 						Rédaction du Temps, <b>Lausanne</b>
 					</div>
-					<!-- <div class="mdl-card__actions mdl-card--border">
-						<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-							Get Started
-						</a>
-					</div> -->
-					<!-- <div class="card-menu mdl-card__menu">
-						<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-							<i class="material-icons">share</i>
-						</button>
-					</div> -->
+					
 				</div>
 
 			</div>
