added js for _blank links on cards

--- a/index.html.twig
+++ b/index.html.twig
@@ -3,6 +3,13 @@
 <html> 
 
 	<head>
+		<!-- Google Tag Manager -->
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer','GTM-TQ2B8Q');</script>
+		<!-- End Google Tag Manager -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="assets/css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="assets/css/main.css" />
@@ -24,6 +31,11 @@
 	</head>  
  
 	<body style="padding-top: {{ navBarOffset }};">
+
+		<!-- Google Tag Manager (noscript) -->
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TQ2B8Q"
+		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 		
 		<header class="cd-header" style="background:url('img/article/berthollet.jpg')">
 			<div class="header-top">
@@ -135,7 +147,7 @@
 
 			<div class="grid">
 
-				<div class="card card-wide mdl-card mdl-shadow--2dp">
+				<div class="card test card-wide mdl-card mdl-shadow--2dp" card-url="https://www.letemps.ch">
 					<div class="card-header mdl-card__title" style="background: url('img/article/berthollet.jpg')">
 						<span class="card-chip mdl-chip">
 						    <span class="card-chip__text mdl-chip__text">Premium</span>
