--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -159,7 +159,8 @@ header {
   width: 32%;
   margin-right: 2%;
   float: lefT;
-  margin-bottom: 4%; }
+  margin-bottom: 4%;
+  cursor: pointer; }
   @media screen and (max-width: 768px) {
     .card-wide.mdl-card {
       width: 49%; }
@@ -268,8 +269,5 @@ h2 {
 
 .getmdl-select, .mdl-textfield {
   font-family: 'Apercu'; }
-
-.brand-nav {
-  display: none; }
 
 /*# sourceMappingURL=main.css.map */
