--- a/assets/scss/_layout.css
+++ b/assets/scss/_layout.css
@@ -82,7 +82,8 @@ header {
   width: 32%;
   margin-right: 2%;
   float: lefT;
-  margin-bottom: 4%; }
+  margin-bottom: 4%;
+  cursor: pointer; }
   @media screen and (max-width: 768px) {
     .card-wide.mdl-card {
       width: 49%; }
