--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -135,6 +135,7 @@ header
   margin-right: 2%;
   float: lefT;
   margin-bottom: 4%;
+  cursor: pointer;
 
   @media screen and (max-width: 768px) {
     width: 49%;
