--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,34 @@
   box-sizing: border-box; }
 
 /*Boxes settings*/
+@font-face {
+  font-family: "ratio_light";
+  src: url("../fonts/ratio_light.eot?#iefix") format("embedded-opentype"), url("../fonts/ratio_light.woff") format("woff"), url("../fonts/ratio_light.ttf") format("truetype"), url("../fonts/ratio_light.svg#ratio_light") format("svg"); }
+
+@font-face {
+  font-family: "ratio_reg";
+  src: url("../fonts/ratio_reg.eot?#iefix") format("embedded-opentype"), url("../fonts/ratio_reg.woff") format("woff"), url("../fonts/ratio_reg.ttf") format("truetype"), url("../fonts/ratio_reg.svg#ratio_reg") format("svg"); }
+
+@font-face {
+  font-family: "ratio_medium";
+  src: url("../fonts/ratio_medium.eot?#iefix") format("embedded-opentype"), url("../fonts/ratio_medium.woff") format("woff"), url("../fonts/ratio_medium.ttf") format("truetype"), url("../fonts/ratio_medium.svg#ratio_medium") format("svg"); }
+
+@font-face {
+  font-family: "ratio_bold";
+  src: url("../fonts/ratio_bold.eot?#iefix") format("embedded-opentype"), url("../fonts/ratio_bold.woff") format("woff"), url("../fonts/ratio_bold.ttf") format("truetype"), url("../fonts/ratio_bold.svg#ratio_bold") format("svg"); }
+
+@font-face {
+  font-family: "rooney_light";
+  src: url("../fonts/rooney_light.eot?#iefix") format("embedded-opentype"), url("../fonts/rooney_light.woff") format("woff"), url("../fonts/rooney_light.ttf") format("truetype"), url("../fonts/rooney_light.svg#rooney_light") format("svg"); }
+
+@font-face {
+  font-family: "rooney_medium";
+  src: url("../fonts/rooney_medium.eot?#iefix") format("embedded-opentype"), url("../fonts/rooney_medium.woff") format("woff"), url("../fonts/rooney_medium.ttf") format("truetype"), url("../fonts/rooney_medium.svg#rooney_medium") format("svg"); }
+
+@font-face {
+  font-family: "rooney_bold";
+  src: url("../fonts/rooney_bold.eot?#iefix") format("embedded-opentype"), url("../fonts/rooney_bold.woff") format("woff"), url("../fonts/rooney_bold.ttf") format("truetype"), url("../fonts/rooney_bold.svg#rooney_bold") format("svg"); }
+
 html {
   font-size: 16px; }
 
@@ -40,6 +68,32 @@ img {
   src: url("../fonts/apercu-light.eot?#iefix") format("embedded-opentype"), url("../fonts/apercu-light.woff") format("woff"), url("../fonts/apercu-light.ttf") format("truetype");
   font-weight: 100;
   font-style: normal; }
+
+.mdl-textfield {
+  font-family: 'ratio_reg' !important; }
+
+.mdl-textfield__input {
+  font-family: 'ratio_reg' !important; }
+
+.card-chip {
+  font-family: 'ratio_reg' !important; }
+
+.card-title {
+  font-family: 'Rooney_medium'; }
+
+.card-meta {
+  font-family: 'ratio_reg'; }
+
+.card-desc {
+  font-family: 'rooney_light'; }
+
+.popup-newsletter--header--title {
+  font-family: 'ratio_light'; }
+
+.popup-newsletter--body--text {
+  font-family: 'ratio_reg'; }
+  .popup-newsletter--body--text b {
+    font-family: 'ratio_medium'; }
 
 h1 {
   font-size: 4em;
@@ -90,6 +144,12 @@ header {
     left: 30px;
     top: 25px;
     background: #930025 !important; }
+  .header-top .follow-us {
+    position: absolute;
+    top: 25px;
+    right: 30px; }
+    .header-top .follow-us > span {
+      opacity: .5; }
   .header-top .header-top--container {
     width: 200px;
     position: absolute;
@@ -119,7 +179,8 @@ header {
       text-rendering: optimizeLegibility;
       font-size: 16px;
       line-height: 20px;
-      margin: 0; }
+      margin: 0;
+      font-family: 'ratio_reg' !important; }
 
 .hello-form {
   width: 95%;
@@ -161,6 +222,8 @@ header {
   float: lefT;
   margin-bottom: 4%;
   cursor: pointer; }
+  .card-wide.mdl-card:hover {
+    opacity: 0.85; }
   @media screen and (max-width: 768px) {
     .card-wide.mdl-card {
       width: 49%; }
@@ -203,7 +266,8 @@ header {
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
   .card-chip .card-chip__text {
     font-size: 10px;
-    color: white; }
+    color: white;
+    line-height: 34px; }
 
 .card-overlay {
   position: absolute;
@@ -232,8 +296,7 @@ header {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
-  font-weight: 500 !important;
-  font-family: 'Apercu'; }
+  font-weight: 500 !important; }
 
 .card-desc {
   color: #4e4e4e !important;
@@ -264,8 +327,51 @@ header {
     top: 50%;
     transform: translateY(-50%); }
 
+.popup-newsletter {
+  padding: 25px 35px;
+  z-index: 10;
+  position: fixed;
+  bottom: 16px;
+  right: 16px;
+  width: 330px;
+  height: 330px;
+  border: 1px solid #F7F7F7;
+  background: white;
+  border-radius: 3px;
+  box-shadow: 0 14px 23px 0 rgba(183, 183, 183, 0.5); }
+  .popup-newsletter .popup-newsletter--header {
+    width: 100%; }
+    .popup-newsletter .popup-newsletter--header .popup-newsletter--header--img {
+      width: 40px;
+      height: 40px;
+      border-radius: 3px;
+      margin: auto;
+      margin-bottom: 15px; }
+    .popup-newsletter .popup-newsletter--header .popup-newsletter--header--title {
+      text-align: center;
+      display: block;
+      width: 100%;
+      font-size: 22px;
+      margin-bottom: 25px;
+      opacity: .5; }
+  .popup-newsletter .popup-newsletter--body {
+    width: 100%; }
+    .popup-newsletter .popup-newsletter--body .popup-newsletter--body--text {
+      text-align: center;
+      display: block;
+      font-size: 18px;
+      line-height: 22px;
+      margin-bottom: 10px;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      text-rendering: optimizeLegibility; }
+    .popup-newsletter .popup-newsletter--body button {
+      left: 50%;
+      transform: translateX(-50%);
+      background: #930025 !important; }
+
 h2 {
-  font-family: 'Apercu' !important; }
+  font-family: 'ratio_light' !important; }
 
 .getmdl-select, .mdl-textfield {
   font-family: 'Apercu'; }
