--- a/index.html.twig
+++ b/index.html.twig
@@ -84,13 +84,13 @@
 					</ul>
 				</span> -->
 
-				<div class="follow-us">
-					<span class="follow-us--text">Suivez-nous:</span>
-					<button id="follow-us-menu-top-right" class="share-menu mdl-button mdl-js-button mdl-button--icon">
+				<div class="share-this-page">
+					<span class="share-this-page--text"><h6>Partagez cette page:</h6></span>
+					<button id="share-this-page-menu-top-right" class="share-menu mdl-button mdl-js-button mdl-button--icon">
 					  <i class="material-icons">share</i>
 					</button>
 					<ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect share-menu--content"
-					    data-mdl-for="follow-us-menu-top-right">
+					    data-mdl-for="share-this-page-menu-top-right">
 					  <li class="mdl-menu__item">Facebook</li>
 					  <li class="mdl-menu__item">Twitter</li>
 					  <li class="mdl-menu__item">Linkedin</li>
@@ -333,6 +333,15 @@
 		</main>
 
 		<footer>
+			<div class="prefooter">
+				<h4>Suivez les événements du Temps sur les réseaux sociaux</h4>
+				<ul>
+					<li class="facebook">Facebook</li>
+					<li class="twitter">Twitter</li>
+					<li class="instagram">Instagram</li>
+					<li class="linkedin">Linkedin</li>
+				</ul>
+			</div>
 			
 		</footer>
 		
