--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -1,5 +1,6 @@
 $color: #930025;
-
+$gray-light: #f2f2f2;
+$gray-light-gray-text: #7f8081;
 
 
 header
@@ -20,12 +21,12 @@ header
    {
        position: absolute;
        left: 30px;
-       top:25px;
+       top: 50%;
        background: #930025 !important;
-       //transform: translateY(-50%);
+       transform: translateY(-50%);
    }
 
-  .follow-us
+  .share-this-page
   {
     > span
     {
@@ -33,8 +34,9 @@ header
     }
 
     position: absolute;
-    top: 25px;
+    top: 50%;
     right: 30px;
+    transform: translateY(-50%);
     //background: #930025 !important;
     //background: red;
     //width: 50px;
@@ -396,5 +398,36 @@ h2 //Punchline
 .getmdl-select, .mdl-textfield 
 {
   font-family: 'Apercu';
+}
+
+footer
+{
+  .prefooter
+  {
+    background: $gray-light;
+    overflow: auto;
+    
+    ul 
+    {
+      display: block;
+      text-align: center;
+      li 
+      {
+        display: inline-block;
+        font-family: tungsten;
+        text-transform: uppercase;
+        font-size: 27px;
+        padding: 0 15px;
+        -webkit-font-smoothing: antialiased; 
+                -moz-osx-font-smoothing: grayscale; 
+                text-rendering: optimizeLegibility;
+        
+        &.facebook { color: #3b5998; }
+        &.twitter { color: #55acee; }
+        &.instagram { color: #e1306c; }
+        &.linkedin { color: #0077B5; }
+      }
+    }
+  }
 }
 
