--- a/assets/scss/_typography.css
+++ b/assets/scss/_typography.css
@@ -19,6 +19,19 @@
   font-weight: 100;
   font-style: normal; }
 
+h4 {
+  text-align: center;
+  color: #7f8081;
+  font-size: 24px;
+  font-family: 'ratio_light' !important;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility; }
+
+h6 {
+  margin: 0 !important;
+  display: inline; }
+
 .mdl-textfield {
   font-family: 'ratio_reg' !important; }
 
